# Isaac_RandomItem_CLI

./: CMakeLists.txt  LICENSE
data/: items.json
include/: http.h  item.h  json.h  logic.h  parser.h
src/: http.cpp  json.cpp  logic.cpp  main.cpp  parser.cpp
